[package]
name = "slint-memory-test"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = {version = "1.8", default-features = false, features = ["compat-1-2", "std", "backend-qt", "renderer-femtovg"]}
memory-stats = "1.2"

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1   
panic = 'abort'
strip = true